@@ -119,6 +119,10 @@ Core
 
 * Update broken getppid() detection for Perl 5.10.0.
 
+* Do not specify a default charset if none is passed via MV_HTTP_CHARSET.
+  Thanks to Raymond Cheng <rayonnet@hotmail.com> for pointing out the regression
+  caused by this.
+
 Payment
 -------
 
